create jwt and setup the signup auth

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ MONGODB_URI = mongodb+srv://alislimani135027:xJcYxc689SWhGZgg@cluster0.tsvns.mon
 
 PORT =5173
 
+JWT_SECRET = mysceretkey;
+
+NODE_ENV = "development"
