finish the auth routers and controllers + add the cloudinary storage

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,7 @@ PORT =5173
 JWT_SECRET = mysceretkey;
 
 NODE_ENV = "development"
+
+CLOUDINARY_CLOUD_NAME = dal3rp5qn
+CLOUDINARY_API_KEY = 816141725768354
+CLOUDINARY_API_SECRET = Vmd9OkO43cFBh50M8cjre22M8jg
